# log-panther

./: CMakeLists.txt  LICENSE  README.md
src/: app_finder.cpp  app_finder.h  array.h  device_finder.cpp  device_finder.h  logdata.cpp  logdata.h  main.cpp  platform.h  platform_linux.cpp  platform_win32.cpp
